version mobile ok/review fixed menu

--- a/_src/assets/scss/layout/_footer.scss
+++ b/_src/assets/scss/layout/_footer.scss
@@ -23,6 +23,7 @@
     background-color: $color-white;
     border-radius: 50%;
     border: 0;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
 }
 
 // Menu
