--- a/_src/assets/scss/layout/_main.scss
+++ b/_src/assets/scss/layout/_main.scss
@@ -66,13 +66,16 @@
     margin: 0;
     padding: 0 70px 45px 70px;
     list-style: none;
+    display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(6, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-areas:
+        "block__item1"
+        "block__item2"
+        "block__item3";
     grid-gap: 45px;
-
     @media all and (min-width: 768px) {
         padding: 0 40px 60px 40px;
-        display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 1fr 1fr;
     }
@@ -81,62 +84,11 @@
     }
 }
 
-.main__block2-subtitle1 {
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
-    @media all and (min-width: 768px) {
-        grid-column: 1 / 2;
-        grid-row: 1 / 2;
-    }
-}
-.main__block2-text1 {
-    grid-column: 1 / 2;
-    grid-row: 2 / 3;
-    @media all and (min-width: 768px) {
-        grid-column: 1 / 2;
-        grid-row: 1 / 2;
-    }
-}
-
-.main__block2-subtitle2 {
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
-    @media all and (min-width: 768px) {
-        grid-column: 2 / 3;
-        grid-row: 2 / 3;
-    }
-}
-
-.main__block2-text2 {
-    grid-column: 1 / 2;
-    grid-row: 2 / 3;
-    @media all and (min-width: 768px) {
-        grid-column: 2 / 3;
-        grid-row: 2 / 3;
-    }
-}
-
-.main__block2-subtitle3 {
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
-    @media all and (min-width: 768px) {
-        grid-column: 3 / 4;
-        grid-row: 1 / 2;
-    }
-}
-.main__block2-text3 {
-    grid-column: 1 / 2;
-    grid-row: 2 / 3;
-    @media all and (min-width: 768px) {
-        grid-column: 3 / 4;
-        grid-row: 2 / 3;
-    }
-}
-
 .subtitle {
     margin: 0;
     font-family: $font-family-primary;
     font-size: $font-size-m;
+    line-height: 1.67;
     text-align: center;
 }
 
@@ -144,7 +96,35 @@
     margin: 0;
     font-family: $font-family-secondary;
     font-size: $font-size-m;
+    line-height: 1.67;
     text-align: center;
+}
+
+.block__item1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    @media all and (min-width: 768px) {
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+    }
+}
+
+.block__item2 {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    @media all and (min-width: 768px) {
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
+    }
+}
+
+.block__item3 {
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+    @media all and (min-width: 768px) {
+        grid-column: 3 / 4;
+        grid-row: 1 / 2;
+    }
 }
 
 // Button Reasons
