--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -5,22 +5,22 @@ body {
 }
 
 .hero__menu {
+  background-color: #0271bc;
   height: 44px;
   width: 44px;
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 0;
 }
 
 .hero__menu-img {
   width: 16px;
   height: 14px;
-  -o-object-fit: contain;
-  object-fit: contain;
-  background-color: #0271bc;
-  position: fixed;
-  top: 0;
-  left: 0;
+  position: absolute;
+  top: 13px;
+  left: 13px;
+  z-index: 1;
 }
 
 .page__header {
@@ -166,45 +166,18 @@ body {
   margin: 0;
   padding: 0 70px 45px 70px;
   list-style: none;
+  display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: repeat(6, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-areas: "block__item1" "block__item2" "block__item3";
   grid-gap: 45px;
-}
-
-.main__block2-subtitle1 {
-  grid-column: 1 / 2;
-  grid-row: 1 / 2;
-}
-
-.main__block2-text1 {
-  grid-column: 1 / 2;
-  grid-row: 2 / 3;
-}
-
-.main__block2-subtitle2 {
-  grid-column: 1 / 2;
-  grid-row: 1 / 2;
-}
-
-.main__block2-text2 {
-  grid-column: 1 / 2;
-  grid-row: 2 / 3;
-}
-
-.main__block2-subtitle3 {
-  grid-column: 1 / 2;
-  grid-row: 1 / 2;
-}
-
-.main__block2-text3 {
-  grid-column: 1 / 2;
-  grid-row: 2 / 3;
 }
 
 .subtitle {
   margin: 0;
   font-family: "Roboto Slab", serif;
   font-size: 18px;
+  line-height: 1.67;
   text-align: center;
 }
 
@@ -212,7 +185,23 @@ body {
   margin: 0;
   font-family: "Roboto", sans-serif;
   font-size: 18px;
+  line-height: 1.67;
   text-align: center;
+}
+
+.block__item1 {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+}
+
+.block__item2 {
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
+}
+
+.block__item3 {
+  grid-column: 1 / 2;
+  grid-row: 3 / 4;
 }
 
 .button__reasons-container {
@@ -268,6 +257,8 @@ body {
   background-color: #ffffff;
   border-radius: 50%;
   border: 0;
+  -webkit-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
 }
 
 .footer__menu {
@@ -358,39 +349,23 @@ body {
 
   .main_block2-list {
     padding: 0 40px 60px 40px;
-    display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
   }
 
-  .main__block2-subtitle1 {
+  .block__item1 {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
   }
 
-  .main__block2-text1 {
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
-  }
-
-  .main__block2-subtitle2 {
+  .block__item2 {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
   }
 
-  .main__block2-text2 {
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
-  }
-
-  .main__block2-subtitle3 {
+  .block__item3 {
     grid-column: 3 / 4;
     grid-row: 1 / 2;
-  }
-
-  .main__block2-text3 {
-    grid-column: 3 / 4;
-    grid-row: 2 / 3;
   }
 
   .footer__grid {
